--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
-    "react": "^16.13.0",
+    "google-maps-react": "^2.0.2",
+    "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.17",
-    "react-dom": "^16.13.0",
+    "react-dom": "^16.13.1",
+    "react-google-maps": "^9.4.5",
+    "react-icons": "^3.9.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "recompose": "latest",
+    "yandex-map-react": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "@material-ui/core": "^4.9.5"
+    "@material-ui/core": "^4.9.7",
+    "google-map-react": "^1.1.7"
   }
 }
